--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Showcase from "../components/Showcase.astro";
 ---
 
 <Layout>
-  <h1>Hello!</h1>
+  <Showcase />
+  <h1>Hello !!!</h1>
 </Layout>
