--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 export interface Props {
     title?: string
@@ -22,5 +23,6 @@ const {title = 'Astro Crash course'} = Astro.props;
 <body>
     <Header />
     <slot />
+    <Footer />
 </body>
 </html>
